css/home.css
@import url(https://weloveiconfonts.com/api/?family=brandico);
@import url(https://weloveiconfonts.com/api/?family=zocial);
@import url(https://weloveiconfonts.com/api/?family=iconicfill);
article{
	border-bottom: 1px solid #ddd;
	color: #D9D9D9;
	font-family: 'Inconsolata', monospace;
	-webkit-font-smoothing: antialiased; 
	background-image:url(../images/top.gif);
	background-repeat: no-repeat;
	background-size:cover;
	background-attachment: fixed;
	background-position: center center;
}
body{
	margin:0 auto;
}

img.logo {
	left:0;
	float:left;
	height: 15vh;
	margin: 1vh auto 1vh auto;
	width: 5vw;
	cursor: pointer;
	text-shadow: 0px 9px 250px -15px red;
  }
  img.logo:hover  {
	-webkit-filter: drop-shadow(3px 3px 3px #FF6347);
	filter: drop-shadow(3px 3px 3px #FF6347);
  }

.checkbtn{
	font-size: 30px;
	color: #696969;
	float: right;
	line-height: 80px;
	margin-right: 40px;
	cursor: pointer;
	display: none;
}


  .nav-head {

	padding: 0;
	list-style: none;
	float: right;
	text-align: right;
	margin-right: 2vw;
	
}

.nav-head li{
	display: inline-block;
	position: relative;
	line-height: 21px;
	text-align: left;

}
.nav-head li a{
	display: block;
	padding: 8px 25px;
	color: grey;
	text-decoration: none;
}
.nav-head li a:hover{
	color: #FF6347;
}

.text {
	margin-top: 5%;
	text-align:left;
	font-size: 3vh;
}
.pic{
	float: left;
	margin: 5%;
	max-width:50vw;
	max-height:50vh;
	width: auto;
	height: auto;
}


.image{
	opacity:1;
	display: block;
	max-width: 80%;
	max-height: 100%;
	margin: auto;
	transition: .5s ease;
	backface-visibility: hidden;
	
}

.workflow { 
	width: 50%;
    margin-top: 25vh;
}

.gimage {
	width: 100%;
}

.social-gallery{
	padding-bottom:2vh;
	margin: auto;
	text-align: center;
	width: 100%;
}
.gallery{
	max-width: 33.33%;
	max-height: 60%;
	position: relative;
	display: flex;
	justify-content: space-evenly;
}
.gallery p {
	position: absolute;
	display: none;
	margin-top: 80%;
}
#pic1:hover, #pic2:hover, #pic3:hover, #pic4:hover, #pic5:hover,
#pic6:hover, #pic7:hover, #pic8:hover, #pic9:hover {
	opacity: 0.3;
}

#pic1:hover + p, #pic2:hover + p, #pic3:hover + p, #pic4:hover + p, #pic5:hover + p,
#pic6:hover + p, #pic7:hover + p, #pic8:hover + p, #pic9:hover + p {
	display: block;
	opacity: 1;
	color: white;
}




.tabcontent{
	width: 100%;
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	margin: auto;
}
.projectnav{
	overflow: hidden;
	text-align: center;
	display: inline-block;
	padding: 3vh;
	margin: auto;
  }
  
  .projectnav a {
	float: left;
	display: block;
	color: black;
	text-align: center;
	padding: 14px 16px;
	text-decoration: none;
	font-size: 17px;
	border-top: 3px solid transparent;
  }
  
  .projectnav a:hover {
	border-top: 3px solid red;
  }
  
  .projectnav a.active {
	border-top: 3px solid red;
  }


  .bigcontainer{
	width: 70%;
	text-align: center;
	margin: auto;
}
.mySlides .numbertext{
	color:black;
}

.overlay{
		transition: .5s ease;
		opacity: 0.3;
		position: absolute;
		background-color: #494c4e;
		width: 60%;
		height: 60%;
		margin: auto;
		z-index: 2;
		transform: translate(-50%, -50%);
		-ms-transform: translate(-50%, -50%);
		text-align: center;
}
.container{
	width: 100%;
	text-align: left;
	vertical-align: center;
}

#p1:hover .image {
	opacity: 0.3;
  }
  

  
#p1:hover .middle{
opacity: 1;
}
  

#p2:hover .image {
	opacity: 0.3;
  }
  
#p2:hover .middle{
opacity: 1;
}
  
.centerblock_home {
	display: flex;
	width: 100%;
	height: 90vh;
	
	text-align: left;

}
.centerblock_home a{
	text-align: left;
}
.home1{
	margin:0 0 0 5vw;
	background-color: transparent;
}
.home2 {
  margin: 5vw;
  background-color: #A1A3A6;
  opacity: 1;
  padding-bottom:50px;
}
.titlename{
	text-align: left;
	padding-top: 8vh;
	margin-bottom:0;
}
.title{
	
	padding-top: 10vh;
	font-family: "Montserrat",Sans-serif;
	font-size: 2vh;
	text-align: left;
	color: #696969;
	margin-left: 20vw;
	margin-right: auto;
	margin-top: 0;
}


.webdev{
	width: 48%;
	justify-content: space-evenly;
	padding: 5px;
}

.webdev a{
	position:relative;
	display: inline-block;
	flex-direction: row;
	flex: 25%;
	justify-content: space-evenly;
	height:20vh;	
  }
  
  .webdev a img {
	height:100%; 
	width:100%;
	object-fit:cover;

}

  .webdev a:before, a:after{
	width:100%;
	position:absolute;
	opacity:0;
	transition:opacity 0.3s ease;
  }
  
  .webdev a:before{
	content:'';
	height:100%;
	background:black;
	
  }
  
  .webdev a:after{
	content:attr(data-title);
	font-size:2vw;
	top:calc(50% - 0.5em);
	left:0;
	text-align:center;
	color:#fff;
	font-family: 'Inconsolata', monospace;
  }
  
  .webdev a:hover:before, a:hover:after{
	opacity:0.8;
	height:100%
  }

/** home3 contact form**/

.home3{
	background-color: black;
	opacity:0.8;
}
.explain{
	width: 44vw;
	text-align: left;
	margin-bottom: 10vh;
	margin-left:7vw;
	color:black;
}

.container {
	position: relative;
	display: inline-block
}
.middle {
	position: absolute;
	transition: .1s ease;
	opacity: 0;
	top: 50%;
	left: 50%;
	background-color: #296c99;
	transform: translate(-50%, -50%);
	-ms-transform: translate(-50%, -50%);
	text-align: center;
	width: 25%;

}
.middletext {
  background-color: #F0F0F0;
  color: #991616;
  font-size: 16px;
  padding: 16px 32px;
}

.centerblock {
	width: 50%;
	margin: auto;
	text-align: center;
	font-size: 3vh;
	padding-bottom: 12vh;

}

.projecttitle{
	font-size: 2vw;
	padding: 3vh;
	margin-bottom: 5vh;
	margin-left: auto;
    margin-right: auto;
}

.illustrationtext{
	text-align: left;
	margin: auto;
}
/*=================== contact form start ====================*/



.form-contact label {
  font-size: 14px;
}


.form-contact .form-group {
  margin: 0 5px 10px 0;
  display: inline-block;
  width: 20vw;
}

.form-comment {
	width: 100%;
}

.form-contact .form-control {
  border: 2px solid #e5e6e9;
  border-radius: 10px;
  height: 48px;
  padding-left: 18px;
  font-size: 13px;
  background: #F0F0F0;

}

.form-contact .form-control:focus {
  outline: 0;
  box-shadow: none;
}


.form-contact .form-control::placeholder {
  font-weight: 400;
  color: #696969;
  font-size: 14px;
}

.form-contact textarea {
  border-radius: 0px;
  height: 100% !important;

}

/*=================== contact form end ====================*/


  
footer{
	background-color:black;
}

/*4 Zocial icons*/

[class*="zocial-"]:before {
	color: grey;
	display: inline-block;
	font-family: 'zocial', sans-serif;
	width: 2em;
	
  }
  [class*="brandico-"]:before {
	font-family: 'brandico', sans-serif;
	color: grey;
	display: inline-block;
	width: 2em;
	
  }
  [class*="iconicfill-"]:before {
	font-family: 'IconicFill', sans-serif;
	color: grey;
	display: inline-block;
	width: 2em;
	
  }

  [class*="zocial-"]:hover {
	color: #FF6347;
  }

  
.social{
	padding-top:5vh;
}
.social a {
  margin: 0 1em 0 0;
 
}
.social a:hover{
	color: #FF6347;
}

.social a:last-of-type {
  margin: 0;
  }

.contactpic{
	max-width: 15vw;
	opacity:1;
}
  
.copyright{
	text-align: center;
	color: #696969;
	font-family: Montserrat,Sans-serif;
	font-size: 1vw;
	padding-top: 10px;
	padding-bottom: 3vh；

}


/* modal ------------------------------------------*/


#myImg {
  border-radius: 5px;
  cursor: pointer;
  transition: 0.3s;
}

#myImg:hover {opacity: 0.7;}

/* The Modal (background) */
.modal {
  display: none; /* Hidden by default */
  position: fixed; /* Stay in place */
  z-index: 1; /* Sit on top */
  padding-top: 100px; /* Location of the box */
  left: 0;
  top: 0;
  width: 100%; /* Full width */
  height: 100%; /* Full height */
  overflow: auto; /* Enable scroll if needed */
  background-color: rgb(0,0,0); /* Fallback color */
  background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
}

/* Modal Content (image) */
.modal-content {
  margin: auto;
  display: block;
  width: 80%;
  max-width: 700px;
}

/* Caption of Modal Image */
#caption {
  margin: auto;
  display: block;
  width: 80%;
  max-width: 700px;
  text-align: center;
  color: #ccc;
  padding: 10px 0;
  height: 150px;
}

/* Add Animation */
.modal-content, #caption {  
  -webkit-animation-name: zoom;
  -webkit-animation-duration: 0.6s;
  animation-name: zoom;
  animation-duration: 0.6s;
  max-width: 40vw;
}

@-webkit-keyframes zoom {
  from {-webkit-transform:scale(0)} 
  to {-webkit-transform:scale(1)}
}

@keyframes zoom {
  from {transform:scale(0)} 
  to {transform:scale(1)}
}

/* The Close Button */
.close {
  position: absolute;
  top: 15px;
  right: 35px;
  color: #f1f1f1;
  font-size: 40px;
  font-weight: bold;
  transition: 0.3s;
}

.close:hover,
.close:focus {
  color: #bbb;
  text-decoration: none;
  cursor: pointer;
}

/* 100% Image Width on Smaller Screens */
@media only screen and (max-width: 700px){
  .modal-content {
    width: 100%;
  }
}
/*--------------------end ----------------------------*/

